Fixing blurriness of sub-pixel heights

--- a/src/components/control_bar/_control_bar.scss
+++ b/src/components/control_bar/_control_bar.scss
@@ -9,6 +9,7 @@
   bottom: 0;
   transform: translateY(0);
   height: $euiControlBarInitialHeight;
+  max-height: $euiControlBarMaxHeight;
 
   &--fixed {
     position: fixed;
@@ -32,20 +33,20 @@
 
   &-isOpen.euiControlBar--large {
     animation-name: euiControlBarOpenPanelLarge;
-    height: calc(100vh - 5rem);
-    bottom: -100vh;
+    height: $euiControlBarMaxHeight;
+    bottom: map-get($euiControlBarHeights, 'l') * -1;
   }
 
   &-isOpen.euiControlBar--medium {
     animation-name: euiControlBarOpenPanelMedium;
-    height: 50vh;
-    bottom: -50vh;
+    height: map-get($euiControlBarHeights, 'm');
+    bottom: map-get($euiControlBarHeights, 'm') * -1;
   }
 
   &-isOpen.euiControlBar--small {
-    animation-name: euiControlBarOpenPanelMedium;
-    height: 25vh;
-    bottom: -25vh;
+    animation-name: euiControlBarOpenPanelSmall;
+    height: map-get($euiControlBarHeights, 's');
+    bottom: map-get($euiControlBarHeights, 's') * -1;
   }
 }
 
@@ -190,7 +191,7 @@
   }
 
   100% {
-    transform: translateY(-100vh);
+    transform: translateY(map-get($euiControlBarHeights, 'l') * -1);
   }
 }
 
@@ -200,7 +201,7 @@
   }
 
   100% {
-    transform: translateY(-50.09vh);
+    transform: translateY(map-get($euiControlBarHeights, 'm') * -1);
   }
 }
 
@@ -210,7 +211,7 @@
   }
 
   100% {
-    transform: translateY(-25.09vh);
+    transform: translateY(map-get($euiControlBarHeights, 's') * -1);
   }
 }
 
